# parp-tools

./: .gitignore  .gitmodules  AGENTS.md  OPENCODE.md  README.md  README_WCAnalyzer.md  imgui.ini
.codex/: README.md
.github/: copilot-instructions.md
.opencode/: README.md
ADTPrefabTool/: note.txt
PM4Tool/: ENHANCED_ANALYSIS_SUMMARY.md  HIERARCHY_ENHANCEMENT_SUMMARY.md  MSRNInvestigator.cs  MSRNQuickTest.cs  README.md  SimpleDemo.cs  SurfaceOrientedDemo.cs  SurfaceOrientedDemo.csproj  WmoMatchingDemo.cs  WmoMatchingDemo.csproj  test_complete_mesh.cs  test_mslk_wmo_matching.cs
ProjectArcane/: ChunkBase.cs  ChunkParser.cs
WCA/: README.md
WCAnalyzer/: ChunkTester.csproj  Program.cs  README.md  TestAdtParser.cs  TestAdtParser.csproj  WCAnalyzer.TestParser.csproj  WCAnalyzer.sln
gillijimproject_refactor/: .gitmodules  Directory.Build.props  README.md  check_image.py  debug_glob.py  debug_inspect_json.py  imgui.ini  setup-libs.ps1  setup-libs.sh  tmp_baseline_standardterrain.txt
gillijimproject_refactor/src/MdxViewer/alphaFixes_dll/AlphaFixes/: CMakeLists.txt  README.md  alphafixes.ini  build.bat
gillijimproject_refactor/src/MdxViewer/alphaFixes_dll/AlphaFixes/dll/: alpha_config.h  alpha_cpufreq.c  alpha_cpufreq.h  alpha_helpers.c  alpha_helpers.h  alpha_main.c  alpha_snapshot.c  alpha_snapshot.h  alpha_tsc.h
gillijimproject_refactor/src/MdxViewer/alphaFixes_dll/AlphaFixes/lib/minhook/: CMakeLists.txt
gillijimproject_refactor/src/MdxViewer/alphaFixes_dll/AlphaFixes/lib/minhook/include/: MinHook.h
parpToolbox/: README.md  parpToolbox.sln  poc_exporter.cs
(+4756 files in other folders)
